# rubric-grading-workbench

./: .envrc  .gitignore  LICENSE  Pipfile  README.mkd  bad_questions.sql  example.py  flake.nix  jq-verify-nuggets.sh  jq-verify-questions.sh  minimal_tests.py  naghmeh-questions.json  nugs-cary3-chatgpt.sh  nugs-cary3-qrels.sh  nugs-dl19.sh  nugs-dl20.sh  official_dl20_leaderboard.json  pyautocorpus.nix  pylatex.nix  pyproject.toml  requirements.txt  setup.py  todos.mkd  trec-car-tools.nix  trec-eval.nix  walkthrough-dl20.sh  warc3-wet-clueweb09.nix  zlib-state.nix
.direnv/flake-inputs/: chmfd52py7vhl8yrk1r59bs0f516k1hh-source
exam_pp/: __init__.py  async_utils.py  attention_classify.py  batched_worker.py  data_model.py  davinci_to_runs_with_text.py  exam_answer_processing.py  exam_cover_metric.py  exam_embed_train.py  exam_evaluation.py  exam_grading.py  exam_import_judgments.py  exam_judgment_correlation.py  exam_leaderboard_analysis.py  exam_leaderboard_correlation.py  exam_llm.py  exam_metric.py  exam_on_the_fly.py  exam_post_pipeline.py  exam_run_trec_eval.py  exam_score.py  exam_to_qrels.py  exam_verification.py  exam_verify_answer.py  flan-t5-large-squad2.py  gpt_cost_estimate.py  ir_datasets_test.py  leaderboard_repr_queries.py  multi_seq_class_grade_model.py  mytest.py  openai_car_run.py  openai_interface.py  openai_to_runs_with_text.py  parse_qrels_runs_with_text.py  print_correlation_table.py  pydantic_helper.py  query_loader.py  question_bank_loader.py  question_generation.py  question_loader.py  (+8 more)
nix/: ir_datasets.nix  unlzw3.nix  warc3-wet.nix
results/: README.mkd  dl20-bad-question.mkd  dl20-cover.mkd  dl20-qrels.mkd  dl20-uncovered-passages-full.txt  dl20-uncovered-passages.mkd  dl20-verify-grading.mkd  generation-methods-dl20-cover.mkd  generation-methods-dl20-qrels.mkd
rubric-neuclir/: flake.nix
