[tool.poetry]
name = "ExamPP"
version = "0.1.0"
description = "EXAM++ Answerability Metric plus plus"
authors = ["Laura Dietz <dietz@cs.unh.edu>", "Ben Gamari <ben@smart-cactus.org>", "Naghmeh Farzi <Naghmeh.Farzi@unh.edu>"]
[tool.poetry.dependencies]
python = "^3.8"  
pydantic = "*"
fuzzywuzzy = "*"
nltk = "*"
pylatex = "*"
trec-car-tools = "*" 

[tool.poetry.dev-dependencies]
mypy = "*"
jedi = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
