[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exam_pp"
version = "0.1.2"
description = "RUBRIC Autograder Workbench for evaluating retrieval, generation, and RAG information systems"
authors = [
    {name = "Laura Dietz", email = "dietz@cs.unh.edu"},
    {name = "Ben Gamari", email = "ben@smart-cactus.org"},
    {name = "Naghmeh Farzi", email = "Naghmeh.Farzi@unh.edu"},
]
requires-python = ">= 3.8"
dependencies = [
    "pydantic ~= 2.6",
    "fuzzywuzzy ~= 0.18",
    "nltk ~= 3.8",
    "pylatex ~= 1.4",
    "scipy",
    "openai ~= 1.11",
    "requests ~= 2.31",
    "trec-car-tools ~= 2.6",
    "torch ~= 2.1",
    "transformers ~= 4.37",
]

[tool.setuptools]
packages = ["exam_pp"]

[project.scripts]
autograder-generate = "exam_pp.question_generation:main"
autograder-grade = "exam_pp.exam_grading:main"
autograder-verify = "exam_pp.exam_verification:main"
autograder-evaluate = "exam_pp.exam_evaluation:main"
autograder-analyze = "exam_pp.exam_post_pipeline:main"
